[project]
name = "radar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "bacxper", email = "153987109+bacxper@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "pytest>=8.0.0",
    "python-pptx>=1.0.0",
]

[project.scripts]
radar = "radar:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
